# done_get_all_id/swagger_server/controllers/classes_controller.py
@@ -4,9 +4,9 @@ import six
 from swagger_server.models.classes import Classes  # noqa: E501
 from swagger_server import util
 from swagger_server.controllers.utils import*
+from swagger_server.controllers import teachers_controller, courses_controller
 
-classes= "classes"
-
+#update date using orm api session
 def add_class(body):  # noqa: E501
     """add a class
 
@@ -18,8 +18,16 @@ def add_class(body):  # noqa: E501
     :rtype: Classes
     """
     if connexion.request.is_json:
-        body = [Classes.from_dict(connexion.request.get_json())]  # noqa: E501
-    return 'do some magic!'
+        body = [Classes.from_dict(connexion.request.get_json()[0])][0]  # noqa: E501
+    # create a new instant class
+    new_class = Classes_instants(name=body.name, start_date=body.start_date,end_date=body.end_date,status=body.status,course_id=body.course_id.course_id ,teacher_id=body.teacher_id.teacher_id)
+    current_course= session.query(Courses_instants).filter(Courses_instants.course_id == new_class.course_id).first()
+    current_teacher= session.query(Teachers_instants).filter(Teachers_instants.teacher_id == new_class.teacher_id).first()
+    # use func add_data is defined by utils.py
+    if current_course == None or current_teacher ==None:
+        return "400 - bad request (course object or teacher object is not exsist"
+    add_data(new_class)
+    return body
 
 
 def del_class_by_id(class_id):  # noqa: E501
@@ -32,9 +40,27 @@ def del_class_by_id(class_id):  # noqa: E501
 
     :rtype: None
     """
-    return 'do some magic!'
+    try:
+        current_class= session.query(Classes_instants).filter(Classes_instants.class_id == class_id).first()
+        current_exam_result= session.query(Exam_results_instants).filter(Exam_results_instants.class_id == class_id).first()
+        current_registration= session.query(Registrations_instants).filter(Registrations_instants.class_id == class_id).first()
+        if current_class == None:
+            return "404 - Not Found"
+        elif current_exam_result != None:
+            return "400 - bad request ( table exam_results)"
+        elif current_registration != None:
+            return "400 - bad request ( table registrations) "
+        else:
+            delete_data(current_class)
+            session.commit()
+            return "success"
+    except Exception:
+        session.rollback()
+        return "404 not found"
+    finally:
+        session.close()
 
-
+# method to get data from database and show all
 def get_all_classes():  # noqa: E501
     """show all classes
 
@@ -43,32 +69,33 @@ def get_all_classes():  # noqa: E501
 
     :rtype: List[Classes]
     """
-    rows = get_all_data(classes)
+   
+    rows = get_all_data(Classes_instants)
     if rows == None:
         return "Not data"
     data=[]
-    for item in rows.fetchall():
-        data_course= get_data_by_id("course",item[4])
-        data_teacher= get_data_by_id("teacher",item[5])
+    for item in rows:
+        data_course= courses_controller.get_course_by_id(item.course_id)
+        data_teacher= teachers_controller.get_teacher_by_id(item.teacher_id)
         data.append({
-            "class_id": item[0],
+            "class_id": item.class_id,
             "course_id": {
-                "course_id": data_course[0],
-                "create_date": data_course[3],
-                "name": data_course[1],
-                "type": data_course[2]
+                "course_id": data_course['course_id'],
+                "create_date": data_course['create_date'],
+                "name": data_course['name'],
+                "type": data_course['type']
                 },
-            "end_date": item[3],
-            "name": item[1],
-            "start_date": item[2],
-            "status": item[6],
+            "end_date": item.end_date,
+            "name": item.name,
+            "start_date": item.start_date,
+            "status": item.status,
             "teacher_id": {
-                "address": data_teacher[4],
-                "email": data_teacher[2],
-                "full_name": data_teacher[1],
-                "grade": data_teacher[5],
-                "phone": data_teacher[3],
-                "teacher_id": data_teacher[0]
+                "address": data_teacher['address'],
+                "email": data_teacher['email'],
+                "full_name": data_teacher['full_name'],
+                "grade": data_teacher['grade'],
+                "phone": data_teacher['phone'],
+                "teacher_id": data_teacher['teacher_id']
                 }
         })
     return data
@@ -84,38 +111,35 @@ def get_classes_by_id(class_id):  # noqa: E501
 
     :rtype: Classes
     """
-    with engine.begin() as conn:
-        sql =f'''
-            SELECT * FROM classes
-            WHERE class_id = {class_id}
-        '''
-        row= conn.execute(sql).fetchone()
-        item=row 
-    if item == None or item =="":
+    # orm api session
+    item= session.query(Classes_instants).filter(Classes_instants.class_id == class_id).first() 
+    if item == None:
         return "Not data"
-    data_course= get_data_by_id("course",item[4])
-    data_teacher= get_data_by_id("teacher",item[5])
-    data={
-        "class_id": item[0],
-        "course_id": {
-            "course_id": data_course[0],
-            "create_date": data_course[3],
-            "name": data_course[1],
-            "type": data_course[2]
-            },
-        "end_date": item[3],
-        "name": item[1],
-        "start_date": item[2],
-        "status": item[6],
-        "teacher_id": {
-            "address": data_teacher[4],
-            "email": data_teacher[2],
-            "full_name": data_teacher[1],
-            "grade": data_teacher[5],
-            "phone": data_teacher[3],
-            "teacher_id": data_teacher[0]
-            }
-    }
+    # data_course is used contain data of course has course_id = item.course_id
+    data_course= courses_controller.get_course_by_id(item.course_id)
+    # data_teacher is used contain data of course has teacher_id = item.teacher_id
+    data_teacher= teachers_controller.get_teacher_by_id(item.teacher_id)
+    data ={
+            "class_id": item.class_id,
+            "course_id": {
+                "course_id": data_course['course_id'],
+                "create_date": data_course['create_date'],
+                "name": data_course['name'],
+                "type": data_course['type']
+                },
+            "end_date": item.end_date,
+            "name": item.name,
+            "start_date": item.start_date,
+            "status": item.status,
+            "teacher_id": {
+                "address": data_teacher['address'],
+                "email": data_teacher['email'],
+                "full_name": data_teacher['full_name'],
+                "grade": data_teacher['grade'],
+                "phone": data_teacher['phone'],
+                "teacher_id": data_teacher['teacher_id']
+                }
+        }
     return data
 
 
@@ -130,5 +154,19 @@ def update_class(body):  # noqa: E501
     :rtype: None
     """
     if connexion.request.is_json:
-        body = [Classes.from_dict(connexion.request.get_json())]  # noqa: E501
-    return 'do some magic!'
+        body = [Classes.from_dict(connexion.request.get_json()[0])][0]  # noqa: E501
+    try:
+        current_class= session.query(Classes_instants).filter(Classes_instants.class_id == body.class_id).first()
+        current_class.course_id= body.course_id.course_id,
+        current_class.end_date= body.end_date,
+        current_class.name= body.name,
+        current_class.start_date=body.start_date,
+        current_class.status= body.status,
+        current_class.teacher_id= body.teacher_id.teacher_id
+        session.commit()
+        return body
+    except Exception:
+        return "fail"
+        session.rollback()  
+    finally:
+        session.close()
