# done_get_all_id/swagger_server/controllers/students_controller.py
@@ -4,7 +4,7 @@ import six
 from swagger_server.models.students import Students  # noqa: E501
 from swagger_server import util
 from swagger_server.controllers.utils import*
-students="students"
+
 
 def add_student(body):  # noqa: E501
     """add a student
@@ -17,8 +17,12 @@ def add_student(body):  # noqa: E501
     :rtype: Students
     """
     if connexion.request.is_json:
-        body = [Students.from_dict(connexion.request.get_json())]  # noqa: E501
-    return 'do some magic!'
+        body = Students.from_dict(connexion.request.get_json())  # noqa: E501
+    #create a new instant student
+    new_student = Students_instants(address=body.address,birthday=body.birthday,email=body.email,facebook=body.facebook,full_name=body.full_name,note=body.note,phone=body.phone)
+    # use func add_data is defined by utils.py
+    add_data(new_student)
+    return body
 
 
 def del_student_by_id(student_id):  # noqa: E501
@@ -31,7 +35,25 @@ def del_student_by_id(student_id):  # noqa: E501
 
     :rtype: None
     """
-    return 'do some magic!'
+    try:
+        current_student= session.query(Students_instants).filter(Students_instants.student_id == student_id).first()
+        current_exam_results= session.query(Exam_results_instants).filter(Exam_results_instants.student_id == current_student.student_id).first()
+        current_registration= session.query(Registrations_instants).filter(Registrations_instants.student_id == current_student.student_id).first()
+        if current_student == None:
+            return "404 - Not Found"
+        elif current_exam_results != None:
+            return f"400 - bad request ( table exam_results)"
+        elif current_registration != None:
+            return "400 - bad request ( table registrations) "
+        else:
+            delete_data(current_student)
+            session.commit()
+            return "success"
+    except Exception:
+        session.rollback()
+        return "404 not found"
+    finally:
+        session.close()
 
 
 def get_all_students():  # noqa: E501
@@ -42,21 +64,21 @@ def get_all_students():  # noqa: E501
 
     :rtype: List[Students]
     """
-    rows = get_all_data(students)
+    rows = get_all_data(Students_instants)
     if rows == None:
         return "Not data"
     data=[]
-    for item in rows.fetchall():
+    for item in rows:
         data.append({
-            "address": item[4],
-            "birthday": item[5],
-            "create_date": item[8],
-            "email": item[2],
-            "facebook": item[7],
-            "full_name": item[1],
-            "note": item[6],
-            "phone": item[3],
-            "student_id": item[0]
+            "address": item.address,
+            "birthday": item.birthday,
+            "create_date": item.create_date,
+            "email": item.email,
+            "facebook": item.facebook,
+            "full_name": item.full_name,
+            "note": item.note,
+            "phone": item.phone,
+            "student_id": item.student_id
         })
     return data
 
@@ -71,19 +93,19 @@ def get_student_by_id(student_id):  # noqa: E501
 
     :rtype: Students
     """
-    item = get_data_by_id("student",student_id)
+    item= session.query(Students_instants).filter(Students_instants.student_id == student_id).first()
     if item == None:
         return "Not data"
-    data={
-        "address": item[4],
-        "birthday": item[5],
-        "create_date": item[8],
-        "email": item[2],
-        "facebook": item[7],
-        "full_name": item[1],
-        "note": item[6],
-        "phone": item[3],
-        "student_id": item[0]
+    data= {
+            "address": item.address,
+            "birthday": item.birthday,
+            "create_date": item.create_date,
+            "email": item.email,
+            "facebook": item.facebook,
+            "full_name": item.full_name,
+            "note": item.note,
+            "phone": item.phone,
+            "student_id": item.student_id
         }
     return data
 
@@ -99,5 +121,21 @@ def update_student(body):  # noqa: E501
     :rtype: None
     """
     if connexion.request.is_json:
-        body = [Students.from_dict(connexion.request.get_json())]  # noqa: E501
-    return 'do some magic!'
+        body = [Students.from_dict(connexion.request.get_json())][0]  # noqa: E501
+    try:
+        current_student= session.query(Students_instants).filter(Students_instants.student_id == body.student_id).first()
+        current_student.address= body.address,
+        current_student.birthday= body.birthday,
+        current_student.create_date= body.create_date,
+        current_student.email=body.email,
+        current_student.facebook= body.facebook,
+        current_student.full_name= body.full_name,
+        current_student.note= body.note,
+        current_student.phone= body.phone
+        session.commit()
+        return body
+    except Exception:
+        return "fail"
+        session.rollback()  
+    finally:
+        session.close()
